# Neural_Network_ECG_Classification

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
Collected_Data/: ecg_data.csv
Collected_Data/patient_212/: ecg_annotations_212.csv
Models/: model.tflite  tinyVGG.tflite  tinyVGG_half.tflite
Projects/: SMOTE_test.py  evaluation.py  main.py  model.py  preprocessing.py  save_load.py  visualization.py
Projects/Drafts/: CNN_tutorial_tensorflow.ipynb  ECG_Classification.ipynb  ECG_Classification_v2(1).ipynb  ECG_Classification_v2.ipynb
preprocessing/: preprocessing.py
preprocessing/data212/: ecg_annotations_212.csv
